src/styles/main.css
@charset "UTF-8";
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  font-family: "Circe";
  font-size: 0.5208335vw;
  font-style: normal;
  font-weight: normal;
  -webkit-animation: bugfix infinite 1s;
  line-height: 1.2;
  margin: 0;
  padding: 0;
}

body {
  font-style: normal;
  font-weight: normal;
  -webkit-animation: bugfix infinite 1s;
  line-height: 1.2;
  margin: 0;
  padding: 0;
  color: #484A5D;
  background-color: #FFFFFF;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

input,
textarea {
  -webkit-animation: bugfix infinite 1s;
  line-height: inherit;
  margin: 0;
  padding: 0;
  background-color: transparent;
  border: none;
  color: inherit;
}

a {
  color: unset;
}

a,
a:hover {
  text-decoration: none;
}

button,
input,
a,
textarea {
  outline: none;
  cursor: pointer;
  font: inherit;
}
button:focus,
input:focus,
a:focus,
textarea:focus {
  outline: none;
}
button:active,
input:active,
a:active,
textarea:active {
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font: inherit;
  margin: 0;
  padding: 0;
}

p {
  margin-top: 0;
  margin-bottom: 0;
}

img {
  width: 100%;
  height: auto;
  display: block;
}

button {
  border: none;
  color: inherit;
  font: inherit;
  text-align: inherit;
  padding: 0;
  background-color: transparent;
}

ul {
  padding: 0;
  margin: 0;
}

ul li {
  margin: 0;
  padding: 0;
  list-style: none;
}

.container {
  width: 167rem;
  margin: 0 auto;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

section {
  margin-bottom: 18rem;
}

@media (max-width: 48em) {
  html {
    font-size: 5px;
    font-size: 1.5625vw;
    font-size: 1.3333333333vw;
    -webkit-text-size-adjust: none;
  }
  body {
    -webkit-text-size-adjust: none;
  }
  .container {
    padding: 0 3rem;
    width: 100%;
  }
}
.call-btn, .why-choose-us__call-btn, .first-screen__call-btn, .footer__btn {
  padding: 0 0;
  margin-left: 24.4rem;
  display: flex;
  width: 23.4rem;
  height: 5.8rem;
  padding: 0.05rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  transition: transform 0.3s ease;
}
@media (max-width: 48em) {
  .call-btn, .why-choose-us__call-btn, .first-screen__call-btn, .footer__btn {
    margin-left: 0;
    width: 37.4rem;
    justify-content: flex-start;
    height: 8rem;
    padding: 0;
  }
}

.call-frame, .why-choose-us__call-frame, .first-screen__call-frame, .footer__call-frame {
  display: flex;
  margin-left: -0.5rem;
  box-sizing: border-box;
  width: 16.9rem;
  height: 5.6rem;
  padding: 1.7rem 1.6rem;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  flex-shrink: 0;
  border-radius: 10rem;
  background: #FFF;
  color: #131313;
  font-family: "Avanti";
  font-size: 1.6rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}
@media (max-width: 48em) {
  .call-frame, .why-choose-us__call-frame, .first-screen__call-frame, .footer__call-frame {
    width: 28.4rem;
    height: 8rem;
    padding: 2.6rem 3.2rem;
    justify-content: center;
    align-items: center;
    border-radius: 20rem;
    font-size: 2.8rem;
  }
}

.header {
  margin-top: 3rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
}
.header_type_white-absolute {
  z-index: 10;
  position: absolute;
  top: 5rem;
}
.header_type_white-absolute .header__nav-list-link {
  color: #FFF;
}
.header_type_white-absolute .header__number {
  color: #131313;
  background: #FFF;
}
.header_type_white-absolute .header__text {
  color: #FFF;
}
.header_type_white-absolute .header__inner_desktop {
  padding: 0 7rem;
  max-width: 188rem;
}
.header_type_white-absolute .header__inner_mobile {
  padding: 0 4rem;
}
.header__inner {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
  box-sizing: border-box;
  flex-shrink: 0;
  width: 100%;
}
.header__inner_desktop {
  opacity: 1;
  padding: 0 0;
  max-width: 174rem;
}
.header__inner_mobile {
  opacity: 0;
  display: none;
}
.header__logo-link svg {
  width: 24.1rem;
  height: 9rem;
}
.header__logo {
  width: 100%;
  height: 100%;
}
.header__nav-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 6.4rem;
}
.header__nav-list-link {
  color: #131313;
  font-family: "Avanti";
  font-size: 2rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.04rem;
}
.header__number {
  color: #FFF;
  font-family: "Avanti";
  font-size: 1.6rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  display: flex;
  height: 5.6rem;
  padding: 1.6rem 3.2rem;
  align-items: center;
  gap: 1rem;
  border-radius: 10rem;
  background: #131313;
  border-radius: 10rem;
}
.header__text {
  color: #131313;
  font-family: "Avanti";
  font-size: 3rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}
/* ... */

